# cookiecutter-python-package

./: .pre-commit-config.yaml  CLAUDE.md  Makefile  PROJECT_README.md  README.md  cookiecutter.json  cookiecutter.md  pyproject.toml  requirements.dev.in  requirements.dev.txt
.github/workflows/: ci.yml  docs.yml  pip_publish.yml
_github/workflows/: static.yml
docs/: index.md  mkdocs-en.yml  mkdocs-ru.yml
docs/en/: index.md
docs/ru/: index.md
en/: 404.html  index.html
en/search/: search_index.json
hooks/: post_gen_project.py
ru/: index.html  sitemap.xml
ru/api-reference/: index.html
ru/search/: search_index.json
scripts/: verup.sh
src/opensearch_log/: __init__.py
src/{{ cookiecutter.package_name|replace('-', '_') }}/: __init__.py
{{ cookiecutter.package_name }}/: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  LICENSE.txt  Makefile  README.md  activate.sh  build.sh  compose.sh  docker-compose.yml  environment.yml  invoke.yml  pyproject.toml  requirements.dev.in  requirements.dev.txt  requirements.txt  tasks.py
{{ cookiecutter.package_name }}/.github/workflows/: ci.yml  dockerhub.yml  docs.yml  pip_publish.yml  static.yml
{{ cookiecutter.package_name }}/docs/: index.md  mkdocs-en.yml  mkdocs-ru.yml  mkdocs.yml
{{ cookiecutter.package_name }}/docs/includes/: install_pipx_macos.sh
{{ cookiecutter.package_name }}/docs/src/en/: index.md  installation.md  reference.md
{{ cookiecutter.package_name }}/docs/src/ru/: index.md  installation.md
{{ cookiecutter.package_name }}/scripts/: build-docs.sh  compile_requirements.sh  docs-render-config.sh  docstrings.sh  include_pyproject_requirements.py  verup_action.sh
{{ cookiecutter.package_name }}/src/{{ cookiecutter.project_slug }}/: __init__.py  main.py
{{ cookiecutter.package_name }}/tests/: test_{{ cookiecutter.package_name|replace('-', '_') }}.py
{{ cookiecutter.project_slug }}/: Makefile  pyproject.toml  requirements.dev.in
{{ cookiecutter.project_slug }}/.github/workflows/: ci.yml  docs.yml  pip_publish.yml
{{ cookiecutter.project_slug }}/docs/: mkdocs-en.yml  mkdocs-ru.yml
{{ cookiecutter.project_slug }}/docs/en/: index.md
{{ cookiecutter.project_slug }}/scripts/: build-docs.sh  compile_requirements.sh  docstrings.sh  verup.sh
{{ cookiecutter.project_slug }}/tests/: test_{{ cookiecutter.package_name|replace('-', '_') }}.py
