[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "{{ cookiecutter.package_name }}"
dynamic = [ "version",]
description = "{{ cookiecutter.package_description }}"
keywords = [ "one", "two", ]
classifiers = [ "Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent",]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []
[[project.authors]]
name = "Andrey Sorokin"
email = "andrey@sorokin.engineer"

[project.license]
file = "LICENSE.txt"

[project.urls]
Homepage = "https://andgineer.github.io/{{ cookiecutter.package_name }}/"
Documentation = "https://andgineer.github.io/{{ cookiecutter.package_name }}/"

[tool.setuptools]
packages = "find:"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.manifest]
include = [ "README.md", "LICENSE.txt",]

[tool.ruff]
line-length = 99

[tool.hatch.version]
path = "src/{{ cookiecutter.project_slug }}/__about__.py"

#[project.scripts]
#{{ cookiecutter.package_name }} = "{{ cookiecutter.project_slug }}.main:{{ cookiecutter.project_slug }}"
